--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ android {
                 sourceCompatibility JavaVersion.VERSION_1_8
                 targetCompatibility JavaVersion.VERSION_1_8
             }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 static def buildTime() {
 //    return new Date().format("yyyyMMdd_HHmmss", TimeZone.getDefault());
