--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     api dependencies.retrofitAdapterRxjava2
     api dependencies.okhttp3LogInterceptor
     api dependencies.okhttp3
+    api dependencies.rxAndroid
 
     //lifecycle
     def lifecycle_version = "1.1.1"
